--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Odin Recipes</h1>
     <hr>
-    <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a>
+    <ul>
+        <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
+        <li><a href="recipes/lasagna2.html" target="_blank" rel="noopener noreferrer">Lasagna2</a></li>
+        <li><a href="recipes/lasagna3.html" target="_blank" rel="noopener noreferrer">Lasagna3</a></li>
+    </ul>
 </body>
 </html>
