--- a/index.html
+++ b/index.html
@@ -3,15 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>CSS exercises</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <hr>
-    <ul>
-        <li><a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a></li>
-        <li><a href="recipes/lasagna2.html" target="_blank" rel="noopener noreferrer">Lasagna2</a></li>
-        <li><a href="recipes/lasagna3.html" target="_blank" rel="noopener noreferrer">Lasagna3</a></li>
-    </ul>
+
 </body>
 </html>
