--- a/index.html
+++ b/index.html
@@ -5,17 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS exercises</title>
     <link rel="stylesheet" href="style.css" />
-    <style>
-        p {
-            background-color: green;
-            color: white;
-            font-size: 18px;
-        }
-    </style>
 </head>
 <body>
-    <div>Style me via the external method</div>
-    <p>I would like to be styled with the internal method please.</p>
-    <button style="background-color: orange; font-size: 18px;">Inline Method</button>
+    <p class="red">Number 1 - I'm a class!</p>
+    <div id="n2">Number 2 - I'm one ID</div>
+    <p class="red n3">Number 3 - I'm a class, but cooler!</p>
+    <div id="n4">Number 4 - I'm another ID.</div>
+    <p class="red">Number 5 - I'm a class!</p>
 </body>
 </html>
