--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <p class="red">Number 1 - I'm a class!</p>
-    <div id="n2">Number 2 - I'm one ID</div>
-    <p class="red n3">Number 3 - I'm a class, but cooler!</p>
-    <div id="n4">Number 4 - I'm another ID.</div>
-    <p class="red">Number 5 - I'm a class!</p>
+    <button class="but1">Click Me!</button>
+    <button class="but2">No, Click Me!</button>
 </body>
 </html>
