--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <button class="but1">Click Me!</button>
-    <button class="but2">No, Click Me!</button>
+    <div>
+        <img class="avatar proportioned" src="https://raw.githubusercontent.com/TheOdinProject/css-exercises/main/foundations/04-chaining-selectors/pexels-katho-mutodo-8434791.jpg" alt="">
+        <img class="avatar distorted" src="https://raw.githubusercontent.com/TheOdinProject/css-exercises/main/foundations/04-chaining-selectors/pexels-andrea-piacquadio-3777931.jpg" alt="">
+    </div>
+    <div>
+        <img class="original proportioned" src="https://raw.githubusercontent.com/TheOdinProject/css-exercises/main/foundations/04-chaining-selectors/pexels-katho-mutodo-8434791.jpg" alt="">
+        <img class="original distorted" src="https://raw.githubusercontent.com/TheOdinProject/css-exercises/main/foundations/04-chaining-selectors/pexels-andrea-piacquadio-3777931.jpg" alt="">
+    </div>
 </body>
 </html>
