--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <div>
-        <img class="avatar proportioned" src="https://raw.githubusercontent.com/TheOdinProject/css-exercises/main/foundations/04-chaining-selectors/pexels-katho-mutodo-8434791.jpg" alt="">
-        <img class="avatar distorted" src="https://raw.githubusercontent.com/TheOdinProject/css-exercises/main/foundations/04-chaining-selectors/pexels-andrea-piacquadio-3777931.jpg" alt="">
+        <p>This should be styled.</p>
     </div>
+    <p>This should be unstyled.</p>
+    <p>This should be unstyled.</p>
     <div>
-        <img class="original proportioned" src="https://raw.githubusercontent.com/TheOdinProject/css-exercises/main/foundations/04-chaining-selectors/pexels-katho-mutodo-8434791.jpg" alt="">
-        <img class="original distorted" src="https://raw.githubusercontent.com/TheOdinProject/css-exercises/main/foundations/04-chaining-selectors/pexels-andrea-piacquadio-3777931.jpg" alt="">
+        <p>This should be styled.</p>
+        <p>This should be styled.</p>
     </div>
 </body>
 </html>
