--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS exercises</title>
-    <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-    <div>
-        <p>This should be styled.</p>
+    <title>Fix the Cascade</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <p class="para">I'm just a paragraph with extra bold text!</p>
+    <p class="para small-para">I'm a smaller paragraph, also with extra bold text!</p>
+
+    <button id="confirm-button" class="button confirm">Confirm</button>
+    <button id="cancel-button" class="button cancel">Cancel</button>
+
+    <div class="text">I'm a div with thin text!</div>
+    <div class="text">I'm a div with thin text and a child div!
+      <div class="text child">I'm a smaller child div with extra bold text.</div>
     </div>
-    <p>This should be unstyled.</p>
-    <p>This should be unstyled.</p>
-    <div>
-        <p>This should be styled.</p>
-        <p>This should be styled.</p>
-    </div>
-</body>
+  </body>
 </html>
